# beatrec

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config
.github/workflows/: main.yml  release-please.yml  release.yml  rust.yml  upload-artifacts.yml
scripts/: build-macos.sh  standalone-macos.sh
src/: editor.rs  lib.rs  main.rs  theme.css
src/editor/: button.rs  waveform.rs
xtask/: Cargo.toml
